cabal-version:      2.4
name:               prezin
version:            0.0.1
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Vitor Roque
maintainer:         vitor.roquep@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        OverloadedStrings,
        NumericUnderscores
        DeriveAnyClass
        DeriveGeneric
        StandaloneDeriving

library
    import:           warnings, extensions
    exposed-modules:  MyLib, Track, Featurizer, OneHotEncoder
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        scotty,
        text,
        containers,
        bytestring,
        aeson,
        aeson-casing,
        http-types,
        lens
    hs-source-dirs:   src
    default-language: Haskell2010

executable prezin
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        prezin

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite prezin-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        prezin
